# modulo2_nivel5

./: pyproject.toml
.github/workflows/: build.yml
docs/source/: conf.py  index.rst
nivel5/: detector.py
