[tool.poetry]
name = "nivel5"
version = "0.0.1"
description = ""
authors = ["CristianTacoronteRivero <cristiantr.develop@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
scikit-learn = "^1.1.3"
pandas = "^1.5.1"


[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
pylint = "^2.15.5"
sphinx = "^5.3.0"
sphinx-autoapi = "^2.0.0"
pytest = "^7.2.0"
pre-commit = "^2.20.0"
pytest-cov = "^4.0.0"
mypy = "^0.982"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "--doctest-modules"